Meilleur emplacement pour le h2 forum + correction d'alignement des logos dans les listes
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@2869 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/fraichdist/habillage.css
+++ b/fraichdist/habillage.css
@@ -120,12 +120,11 @@ table.spip td { padding: 3px; text-align: left; vertical-align: middle; }
 ----------------------------------------------- */
 .extrait { margin-bottom: 16px; }
 .extrait .titre a { font-size: 0.9em; font-weight: bold; text-decoration: none; }
+.extrait .spip_logos { margin: 0 0 5px 5px; border: 0; clear: right; } /*marges pour des logos alignes a droite*/
+.extrait .enclosures { max-width: 60%; margin: 0 16px; }
 .extrait small { display: block; font-size: 0.7em; }
 .extrait small, .extrait .texte { display: block; margin: 2px 16px 0 16px; }
-.extrait .spip_logos { margin: 0 0 5px 5px; border: 0; } /*marges pour des logos alignes a droite*/
 .extrait .texte { margin-bottom: 2em; border: 1px solid #CCC; padding: 0.9em; font-size: 0.8em; line-height: 1.4em; }
-
-.extrait .enclosures { max-width: 60%; margin: 0 16px; }
 
 /* Habillage du plan du site
 ----------------------------------------------- */
